Additional objects are deleted after reloading a scene with a Library Override with some overridden objects deleted. #89400

Closed
opened 2021-06-24 02:36:08 +02:00 by David Lejeune · 6 comments

System Information
Operating system: Windows 10
Graphics card: Radeon 5700XT

Blender Version
Broken: 2.83, 2.93
Working: Probably never

Short description of error
After linking a collection, creating a Library Override, deleting some objects from the Library override, saving, and re-loading, more and different objects will be missing than were deleted.

Exact steps for others to reproduce the error
#89400.blend
linked.blend

  • Open file #89400.blend
  • Delete one cube

Save and reopen file

random cubes will be missing

**System Information** Operating system: Windows 10 Graphics card: Radeon 5700XT **Blender Version** Broken: 2.83, 2.93 Working: Probably never **Short description of error** After linking a collection, creating a Library Override, deleting some objects from the Library override, saving, and re-loading, more and different objects will be missing than were deleted. **Exact steps for others to reproduce the error** [#89400.blend](https://archive.blender.org/developer/F10194367/T89400.blend) [linked.blend](https://archive.blender.org/developer/F10194368/linked.blend) - Open file #89400.blend - Delete one cube # Save and reopen file random cubes will be missing
Author

Added subscriber: @DKesserich

Added subscriber: @DKesserich

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Issue here is that deleting such object is possible... Should be forbidden, you cannot edit an overridden collection.

Issue here is that deleting such object is possible... Should be forbidden, you cannot edit an overridden collection.

This issue was referenced by b32b38b380

This issue was referenced by b32b38b3805fea5baec551acd1a98c4a58b2bb1c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-09-28 18:30:51 +02:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89400
No description provided.