Fix T89400: Possible to delete objects used by overrides of collections.

This should not be allowed in general, added some initial call to check
when user is allowed to delete a data to search for mandatory override
usages...