source/blender/blenkernel/BKE_lib_override.h
@@ -173,6 +173,8 @@ void BKE_lib_override_library_main_unused_cleanup(struct Main *bmain);
 void BKE_lib_override_library_update(struct Main *bmain, struct ID *local);
 void BKE_lib_override_library_main_update(struct Main *bmain);
 
+bool BKE_lib_override_library_id_is_user_deletable(struct Main *bmain, struct ID *id);
+
 /* Storage (.blend file writing) part. */
 
 /* For now, we just use a temp main list. */
