source/blender/blenkernel/intern/lib_override.c
@@ -2972,6 +2972,31 @@ void BKE_lib_override_library_main_update(Main *bmain)
   G_MAIN = orig_gmain;
 }
 
+/** In case an ID is used by another liboverride ID, user may not be allowed to delete it. */
+bool BKE_lib_override_library_id_is_user_deletable(struct Main *bmain, struct ID *id)
+{
+  if (!(ID_IS_LINKED(id) || ID_IS_OVERRIDE_LIBRARY(id))) {
+    return true;
+  }
+
+  /* The only strong known case currently are objects used by override collections. */
+  /* TODO: There are most likely other cases... This may need to be addressed in a better way at
+   * some point. */
+  if (GS(id->name) != ID_OB) {
+    return true;
+  }
+  Object *ob = (Object *)id;
+  LISTBASE_FOREACH (Collection *, collection, &bmain->collections) {
+    if (!ID_IS_OVERRIDE_LIBRARY(collection)) {
+      continue;
+    }
+    if (BKE_collection_has_object(collection, ob)) {
+      return false;
+    }
+  }
+  return true;
+}
+
 /**
  * Storage (how to store overriding data into `.blend` files).
  *
